--- a/document.tex
+++ b/document.tex
@@ -525,8 +525,39 @@ The Boss class and the Monster class are very basic though, as they only current
 
 \subsection{The Character Movement}
 
+I need to place the character on the screen, I have done this by giving the character a ''Point.'' A Point is a abstract data type which contains a X and a Y co-ordinate. I have also give the player class a tile which it is currently on. This allows me to directly call on the tile, instead of referencing it through the Settings class. This means that the lines of code will be much smaller and will be easier to read. Lastly I have given the tile class a Boolean value which tells me if it is containing the player inside of it. 
+
 
 \section{Used Websites}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 \url{https://creately.com/app/?tempID=h165rwt81&login_type=demo#}\newline
 \url{https://en.wikipedia.org/wiki/Maze_generation_algorithm}
